fix cssBayan-task (Sat, 03.11.2023 21:02)

--- a/m2volk_cyber/index.html
+++ b/m2volk_cyber/index.html
@@ -5,26 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/m2volk_cyber/style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="accordeon">
-        <div class="accordeon__item">Название</div>
-        <div class="accordeon__content">1. Содержание</div>
+    <div class="faq">
+        <div class="faq-item"> 
+            <input class="faq-input" type="checkbox" id="faq_1">
+            <label class="faq-title" for="faq_1"> MEME #1</label>
+            <div class="faq-img">
+                <img src="meme/1648364754_1-kartinkof-club-p-memi-luchshie-za-den-1.jpg" alt="1">
+            </div>
+        </div>
+        <div class="faq-item">
+            <input class="faq-input" type="checkbox" id="faq_2">
+            <label class="faq-title" for="faq_2"> MEME #2</label>
+            <div class="faq-img">
+                <img src="meme/f0e1c3b4b532fbc70a73e022ffcf35f2_fitted_1332x0.jpg" alt="2">
+            </div>
+        </div>
+        <div class="faq-item"> 
+            <input class="faq-input" type="checkbox" id="faq_3">
+            <label class="faq-title" for="faq_3"> MEME #3</label>
+            <div class="faq-img">
+                <img src="meme/images.jpg" alt="3">
+            </div>
+        </div>
+        <div class="faq-item"> 
+            <input class="faq-input" type="checkbox" id="faq_4">
+            <label class="faq-title" for="faq_4"> MEME #4</label>
+            <div class="faq-img">
+                <img src="meme/mem-2-1024x683.jpg" alt="4">
+            </div>
+        </div>
     </div>
-    <div class="accordeon">
-        <div class="accordeon__item">Название</div>
-        <div class="accordeon__content">2. Содержание</div>
-    </div>
-    <div class="accordeon">
-        <div class="accordeon__item">Название</div>
-        <div class="accordeon__content">3. Содержание</div>
-    </div>
-    <div class="accordeon">
-        <div class="accordeon__item">Название</div>
-        <div class="accordeon__content">4. Содержание</div>
-    </div>
-
 </body>
 </html>
