--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -8,36 +8,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="faq">
-        <div class="faq-item"> 
-            <input class="faq-input" type="checkbox" id="faq_1">
-            <label class="faq-title" for="faq_1"> MEME #1</label>
-            <div class="faq-img">
-                <img src="meme/1648364754_1-kartinkof-club-p-memi-luchshie-za-den-1.jpg" alt="1">
+
+    <div class="wrapper">
+        <div class="bayan">
+            <h1 class="title">CSS Bayan</h1>
+                <div class="faq">
+                    <div class="faq-item"> 
+                        <input class="faq-input" type="checkbox" id="faq_1">
+                        <label class="faq-title" for="faq_1"> MEME #1</label>
+                        <div class="faq-img">
+                            <img src="meme/1648364754_1-kartinkof-club-p-memi-luchshie-za-den-1.jpg" alt="1">
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <input class="faq-input" type="checkbox" id="faq_2">
+                        <label class="faq-title" for="faq_2"> MEME #2</label>
+                        <div class="faq-img">
+                            <img src="meme/f0e1c3b4b532fbc70a73e022ffcf35f2_fitted_1332x0.jpg" alt="2">
+                        </div>
+                    </div>
+                    <div class="faq-item"> 
+                        <input class="faq-input" type="checkbox" id="faq_3">
+                        <label class="faq-title" for="faq_3"> MEME #3</label>
+                        <div class="faq-img">
+                            <img src="meme/images.jpg" alt="3">
+                        </div>
+                    </div>
+                    <div class="faq-item"> 
+                        <input class="faq-input" type="checkbox" id="faq_4">
+                        <label class="faq-title" for="faq_4"> MEME #4</label>
+                        <div class="faq-img">
+                            <img src="meme/mem-2-1024x683.jpg" alt="4">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="faq-item">
-            <input class="faq-input" type="checkbox" id="faq_2">
-            <label class="faq-title" for="faq_2"> MEME #2</label>
-            <div class="faq-img">
-                <img src="meme/f0e1c3b4b532fbc70a73e022ffcf35f2_fitted_1332x0.jpg" alt="2">
-            </div>
-        </div>
-        <div class="faq-item"> 
-            <input class="faq-input" type="checkbox" id="faq_3">
-            <label class="faq-title" for="faq_3"> MEME #3</label>
-            <div class="faq-img">
-                <img src="meme/images.jpg" alt="3">
-            </div>
-        </div>
-        <div class="faq-item"> 
-            <input class="faq-input" type="checkbox" id="faq_4">
-            <label class="faq-title" for="faq_4"> MEME #4</label>
-            <div class="faq-img">
-                <img src="meme/mem-2-1024x683.jpg" alt="4">
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
